--- a/css/map.css
+++ b/css/map.css
@@ -3,3 +3,8 @@
     font-weight: bold;
     color: gold;
 }
+
+#map {
+    height: 400px; /* The height is 400 pixels */
+    width: 100%; /* The width is the width of the web page */
+}
