--- a/css/main.css
+++ b/css/main.css
@@ -1,56 +1,98 @@
 html {
-    font-family: "Roboto", Helvetica, serif;
-    font-size: 16px;
+  font-family: "Roboto", Helvetica, serif;
+  font-size: 16px;
 }
 
 body {
-    margin: auto;
-    max-width: 1000px;
-    padding: 1.25rem;
-    background: rgba(64, 224, 208, 0.5);
+  margin: auto;
+  max-width: 1000px;
+  padding: 1.25rem;
+  background: rgba(64, 224, 208, 0.5);
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 p {
-    padding: 0.5rem;
-    border: 1px dashed red;
+  padding: 0.5rem;
+  border: 1px dashed red;
 }
 
-h1, nav {
-    margin-bottom: 2rem;
+h1,
+nav {
+  margin-bottom: 1rem;
 }
 
 h2 {
-    margin-bottom: 1.5rem;
+  margin-bottom: 0.75rem;
 }
 
 h3 {
-    margin-bottom: 1.25rem;
+  margin-bottom: 0.625rem;
 }
 
 h4 {
-    margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 h5 {
-    margin-bottom: 0.75rem;
+  margin-bottom: 0.375rem;
 }
 
 h6 {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.2rem;
 }
 
 nav > ul {
-    display: flex;
-    justify-content: space-around;
-    font-size: 1rem;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  gap: 0.5rem;
+  text-align: end;
+  font-size: 1rem;
 }
 
-#root, main {
-    display: flex;
-    flex-flow: column;
+#root,
+main {
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+}
+
+img, video, iframe {
+  width: 100%;
+  max-width: 800px;
+}
+
+@media screen and (min-width: 700px) {
+  nav > ul {
+    flex-direction: row;
     gap: 1rem;
+  }
+
+  h1,
+  nav {
+    margin-bottom: 2rem;
+  }
+
+  h2 {
+    margin-bottom: 1.5rem;
+  }
+
+  h3 {
+    margin-bottom: 1.25rem;
+  }
+
+  h4 {
+    margin-bottom: 1rem;
+  }
+
+  h5 {
+    margin-bottom: 0.75rem;
+  }
+
+  h6 {
+    margin-bottom: 0.5rem;
+  }
 }
