--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,12 +14,6 @@ blockquote + blockquote {
   margin-top: 1.5rem;
 }
 
-section > img {
-  max-width: 100%;
-  height: 300px;
-  margin-bottom: 1rem;
-}
-
 h1::before {
   content: "\01F525";
 }
@@ -27,9 +21,9 @@ h1::before {
 /* Slider */
 
 .slider-container {
-    width: 100%;
+  width: 100%;
   max-width: 600px;
-  height: 480px;
+  height: 450px;
   margin: 0rem auto;
   position: relative;
   overflow: hidden;
@@ -41,6 +35,10 @@ h1::before {
   transition: opacity 0.8s ease-in-out;
   position: absolute;
   width: 100%;
+}
+
+.project > img {
+  height: 300px;
 }
 
 .active {
